--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -55,6 +55,9 @@
 		</li>
 	<% else %>
 		<li>
+			<%= link_to "my page" , edit_user_registration_path %>
+		</li>
+		<li>
 			<%= link_to "signout page" , destroy_user_session_path, method: :delete %>
 		</li>
 	<% end %>
