--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -72,6 +72,7 @@
 	});
 
 	$(document).on("page:load", initialize());
+	$(document).on("page:load", parseFoursquareImg("<%= request.url %>"));
 
 	function initialize(){
 		var restaurant_name = '<%= @restaurant.name %>';
