--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -74,7 +74,9 @@
 	});
 
 	$(document).on("page:load", initialize());
-	$(document).on("page:load", parseFoursquareImg("<%= request.url %>"));
+	<% if @restaurant.with_latlng? %>
+		$(document).on("page:load", parseFoursquareImg("<%= request.url %>"));
+	<% end %>
 
 	function initialize(){
 		var restaurant_name = '<%= @restaurant.name %>';
