Add username validation and show username in header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,9 @@
 <%= link_to "MenuMap", root_path %>
 
+<% if current_user %>
+	<br><%= current_user.username %>
+<% end %>
+
 <ul>
 	<li>
 		<%= link_to "about page", about_path %>
