--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -59,7 +59,7 @@
 		</li>
 	<% else %>
 		<li>
-			<%= link_to "my page" , edit_user_registration_path %>
+			<%= link_to "my page" , user_profile_path(current_user.username) %>
 		</li>
 		<li>
 			<%= link_to "signout page" , destroy_user_session_path, method: :delete %>
