--- a/app/views/mymap/_mymap.html.erb
+++ b/app/views/mymap/_mymap.html.erb
@@ -1,5 +1,6 @@
 <tr>
-	<td><%= restaurant.id %></td>
-	<td><%= restaurant.name %></td>
-	<td><%= link_to "new_mymap", new_restaurant_mymap_path(restaurant) %></td>
+	<td><%= mymap.id %></td>
+	<td><%= mymap.restaurant.id %></td>
+	<td><%= mymap.restaurant.name %></td>
+	<td><%= show_mymap_info_button(mymap) %></td>
 </tr>
