Add new button for MyMap and change mymap controller to mymaps

--- a/app/views/mymaps/index.html.erb
+++ b/app/views/mymaps/index.html.erb
@@ -8,7 +8,7 @@
 		<th>mymap_button</th>
 	</tr>
 
-	<%= render partial: "mymap", collection: @mymaps %>
+	<%= render @mymaps %>
 </table>
 
 <div id="modal">
