--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -19,7 +19,7 @@
 	</tr>
 	<tr>
 		<td>mymap</td>
-		<td><%= mymap_button(@user, @restaurant) %></td>
+		<td id="mymap_button"><%= mymap_button(@user, @restaurant) %></td>
 	</tr>
 </table>
 
