--- a/app/views/mymaps/_show.html.erb
+++ b/app/views/mymaps/_show.html.erb
@@ -14,4 +14,9 @@
 		<td><%= @mymap.group %></td>
 		<td><%= @mymap.contents %></td>
 	</tr>
+
+	<tr>
+		<td><%= link_to "edit_mymap_button", edit_mymap_path(@mymap), { id: "edit_mymap_button", remote: true } %></td>
+		<td colspan="4"></td>
+	</tr>
 </table>
