Show MyMap restaurants' icon on MyMap page's Naver map

--- a/app/views/mymaps/index.html.erb
+++ b/app/views/mymaps/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Mymap#index</h1>
 
+<div id="naver_map"></div>
+
 <table>
 	<tr>
 		<th>mymap_id</th>
@@ -13,3 +15,8 @@
 
 <div id="modal">
 </div>
+
+<script>
+	$(document).on("page:load", loadNaverMap());
+	$(document).ready(function(){ showMarkers(<%= @coord_array %>)});
+</script>
