--- a/app/views/mymaps/_field.html.erb
+++ b/app/views/mymaps/_field.html.erb
@@ -1,5 +1,4 @@
-<%= f.label :rating %>
-<%= f.text_field :rating %>
+<div id="star_rating_form" data-score=<%= @mymap.rating %>></div>
 
 <%= f.label :group %>
 <% 1.upto(10) do |n| %>
@@ -9,3 +8,15 @@
 
 <%= f.label :contents %>
 <%= f.text_field :contents %>
+
+<script>
+	$("#star_rating_form").raty({
+		path: "<%= s3_image_url %>",
+		half: true,
+		scoreName: "mymap[rating]",
+		// In mymaps#edit, star rating should show for references.
+		score: function() {
+			return parseInt($(this).attr("data-score")) / 2;
+		}
+	});
+</script>
