--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -60,7 +60,7 @@
 	<% else %>
 		<% if current_user.admin? %>
 			<li>
-				<%= link_to "admin monitor page" , admin_index_path %>
+				<%= link_to "admin monitor page" , monitors_path %>
 			</li>
 		<% end %>
 		<li>
