--- a/app/views/users/profiles/edit.html.erb
+++ b/app/views/users/profiles/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>My Page</h2>
+<h2>Profiles#edit</h2>
 
 <%= form_for(@user, url: registration_path(@user), html: { method: :put }) do |f| %>
   <%# devise_error_messages! #%>
