Admin only pages

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -45,6 +45,9 @@
 		<%= link_to "addr_rules" , addr_rules_path %>
 	</li>
 	<li>
+		<%= link_to "new addr_rule" , new_addr_rule_path %>
+	</li>
+	<li>
 		<%= link_to "addr_conversions" , addr_conversions_path %>
 	</li>
 	<li>
