--- a/app/views/mymap_snapshots/_new.html.erb
+++ b/app/views/mymap_snapshots/_new.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(user_mymap_snapshot_path) do %>
+<%= form_tag(user_mymap_snapshot_path, id: "new_snapshot") do %>
 	<%= hidden_field_tag 'lat', '' %>
 	<%= hidden_field_tag 'lng', '' %>
 	<%= hidden_field_tag 'level', '' %>
@@ -6,9 +6,9 @@
 <% end %>
 
 <script>
-	$(document).ready(function(){
-		$("#lat").value = oMap.getCenter().getLat();
-		$("#lng").value = oMap.getCenter().getLng();
-		$("#level").value = oMap.getLevel();
+	$("#new_snapshot").submit(function(){
+		$("#lat").val(oMap.getCenter().getLat());
+		$("#lng").val(oMap.getCenter().getLng());
+		$("#level").val(oMap.getLevel());
 	});
 </script>
