--- a/app/views/mymap_snapshots/show.html.erb
+++ b/app/views/mymap_snapshots/show.html.erb
@@ -1,11 +1,6 @@
 <div id="naver_map"></div>
 
 <script>
-	$(document).on("page:load", loadNaverMap());
+	$(document).on("page:load", loadNaverMap(<%= @lat %>, <%= @lng %>, <%= @level %>));
 	$(document).ready(function(){ showMarkers(<%= @coord_array %>)});
-	$(document).ready(function(){
-		var center = new nhn.api.map.LatLng(<%= @lat %>, <%= @lng %>);
-		oMap.setCenter(center);
-		oMap.setLevel(<%= @level %>);
-	});
 </script>
