Add data-validate to question_new page

--- a/app/views/questions/_fields.html.erb
+++ b/app/views/questions/_fields.html.erb
@@ -2,8 +2,8 @@
 <% if current_user %>
 	<%= f.text_field :email, value: current_user.email, readonly: true %>
 <% else %>
-	<%= f.text_field :email %>
+	<%= f.text_field :email, data: { validate: "email" } %>
 <% end %>
 
 <%= f.label :contents, "contents" %>
-<%= f.text_field :contents %>
+<%= f.text_field :contents, data: { validate: "contents" } %>
