--- a/app/views/questions/_new.html.erb
+++ b/app/views/questions/_new.html.erb
@@ -7,7 +7,9 @@
 
 <script src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
 <script>
+$(document).ready( function() {
 	$("#new_question").validate();
+});
 </script>
 <!--
 <script>
