--- a/app/views/mymap_snapshots/_new.html.erb
+++ b/app/views/mymap_snapshots/_new.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 
 <% unless @user.mymap_snapshot.blank? %>
-	<div id="kakaostory-share-button"></div>
+	<div id="kakaostory-share-button" data-dismiss="modal"></div>
 	<a href="http://www.facebook.com/sharer/sharer.php?u=http://52.69.51.63/users/<%= @user.username %>/MyMap">Facebook share</a>
 <% end %>
 
