--- a/app/views/mymaps/index.html.erb
+++ b/app/views/mymaps/index.html.erb
@@ -31,10 +31,14 @@
 	<%= render @mymaps %>
 </table>
 
-<%= link_to "share MyMap", new_user_mymap_snapshot_path(@user), id: "share_mymap_button", remote: true %>
+<%= link_to "share MyMap", new_user_mymap_snapshot_path(@user), id: "share_mymap_button", remote: true, data: {toggle: "modal", target: "#myModal"} %>
 
+<%= render 'shared/modal' %>
+
+<!--
 <div id="modal">
 </div>
+-->
 
 <script>
 	$(document).on("page:load", loadNaverMap());
