Make Franchise view

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -53,6 +53,9 @@
 	<li>
 		<%= link_to "slangs" , slangs_path %>
 	</li>
+	<li>
+		<%= link_to "franchises" , franchises_path %>
+	</li>
 	<% if !current_user %>
 		<li>
 			<%= link_to "signup page" , new_user_registration_path %>
