Add infoWindow & Change clear_data() position

--- a/app/views/addr_rules/new.html.erb
+++ b/app/views/addr_rules/new.html.erb
@@ -25,4 +25,9 @@
 			k = 0;
 		};
 	});
+	function clear_data() {
+		document.getElementById("new_addr_rule").reset();
+		oMap.clearOverlay();
+		k = 0;
+	};
 </script>
