--- a/app/views/mymaps/_show.html.erb
+++ b/app/views/mymaps/_show.html.erb
@@ -21,7 +21,7 @@
 
 	<tr>
 		<td><%= link_to "edit_mymap", edit_mymap_path(@mymap), { id: "edit_mymap_button", remote: true } %></td>
-		<td><%= link_to "destroy_mymap", mymap_path(@mymap), { id: "destroy_mymap_button", method: :delete, remote: true } %></td>
+		<td><%= link_to "destroy_mymap", mymap_path(@mymap), { id: "destroy_mymap_button", method: :delete, remote: true, data: {dismiss: "modal"} } %></td>
 	</tr>
 </table>
 
