--- a/app/views/mymaps/_edit.html.erb
+++ b/app/views/mymaps/_edit.html.erb
@@ -1,5 +1,5 @@
 <h2>mymaps#edit edit = <%= @mymap.id %></h2>
-<%= form_for @mymap, remote: true do |f| %>
+<%= form_for @mymap, remote: true, html: {:onsubmit => "$('#myModal').modal('hide');"} do |f| %>
 	<%= render "field", f: f %>
 	<%= f.submit %>
 <% end %>
