Set center by average

--- a/app/views/addr_rules/show.html.erb
+++ b/app/views/addr_rules/show.html.erb
@@ -12,9 +12,9 @@
 <% end %>
 
 <div id="naver_map" data-markers="<%= @addr_rule.coordinates %>"></div>
-
 <script>
-	$(document).on("page:load", loadNaverMap());
+	$(document).on("page:load",
+			loadNaverMap(<%= @center_y %>, <%= @center_x %>, 10) );
 	// Change this to normal data passing codes to js
 	$(document).ready(function(){ 
 		showMarkers(<%= @coord_array %>);
