--- a/app/views/franchises/_new.html.erb
+++ b/app/views/franchises/_new.html.erb
@@ -1,6 +1,6 @@
 <h1>Franchise#new</h1>
 
-<%= form_for(@franchise_new) do |f| %>
+<%= form_for(@franchise) do |f| %>
 	<%= render "franchises/fields", f: f %>
 	<%= f.submit "gogogo" %>
 <% end %>
