--- a/app/views/mymaps/index.html.erb
+++ b/app/views/mymaps/index.html.erb
@@ -36,6 +36,12 @@
 <%= render 'shared/modal' %>
 
 <script>
-	$(document).on("page:load", loadNaverMap());
-	$(document).ready(function(){ showMarkers(<%= @coord_array %>)});
+	$(document).on("page:load", loadNaverMap(<%= @center_y %>, <%= @center_x %>, 8));
+	$(document).ready(function(){ 
+		showMarkers(<%= @coord_array %>, 1);
+		showGroupImage(<%= @groups  %>, <%= @coord_array %>);
+		$('._nmap_marker').click(function() {
+				$('.nmap_infowindow_content').toggle();
+		});
+	});
 </script>
