--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -124,17 +124,17 @@
 	<% end %>
 
 	function initialize(curr_lat, curr_lng){
-		//var restaurant_name = '<%= @restaurant.name %>';
+		var restaurant_name = '<%= @restaurant.name %>';
 		var oSize = new nhn.api.map.Size(28, 37);
 		var oOffset = new nhn.api.map.Size(14, 37);
 		var oIcon = new nhn.api.map.Icon("https://s3-ap-southeast-1.amazonaws.com/menumap-s3-development/static_assets/images/naver_map_icon.png", oSize, oOffset);
 		var latlng = new nhn.api.map.LatLng(curr_lat, curr_lng);
 		var defaultLevel = 12;
-		//var oMarker = new nhn.api.map.Marker(oIcon, {point : latlng});
-		//var infoWindow = new nhn.api.map.InfoWindow();
-		//infoWindow.setVisible(false);
-    oMap = new nhn.api.map.Map(document.getElementById('map_canvas'), { 
-                                    		point : latlng,
+		var oMarker = new nhn.api.map.Marker(oIcon, {point : latlng});
+		var infoWindow = new nhn.api.map.InfoWindow();
+		infoWindow.setVisible(false);
+    	oMap = new nhn.api.map.Map(document.getElementById('map_canvas'), { 
+                                    	  point : latlng,
 	                                      zoom : defaultLevel,
 	                                      enableWheelZoom : true,
 	                                      enableDragPan : true,
@@ -144,42 +144,41 @@
 	                                      activateBicycleMap : false,
 	                                      minMaxLevel : [ 1, 14 ],
 	                                      size : new nhn.api.map.Size(800, 480)});
-    <% @nearbyRestaurants.each_with_index do |restaurant, index| %>
-	    <% if restaurant.lat != nil && restaurant.lng != nil %>
-	    	var lat = <%= restaurant.lat %>;
-	    	var lng = <%= restaurant.lng %>;
-	    	var restaurant_name = '<%= restaurant.name %>';
-	    	var latlng = new nhn.api.map.LatLng(lat, lng);
-	    	var oMarker = new nhn.api.map.Marker(oIcon, {point: latlng, title: restaurant_name});
-				var oLabel = new nhn.api.map.MarkerLabel();
-	      oMap.addOverlay(oMarker);
-	      oMap.addOverlay(oLabel);
-	      oLabel.setVisible(true, oMarker);
-	    <% end %>
-    <% end %>
-    //oMap.addOverlay(oMarker);
-    //oMap.addOverlay(infoWindow);
-    //oMap.attach('click', function(oCustomEvent) {
-    //	var oPoint = oCustomEvent.point;
-    //	var oTarget = oCustomEvent.target;
-    //	if (oTarget instanceof nhn.api.map.Marker) {
-	  //  	if(infoWindow.getVisible()){
-	  //	 		infoWindow.setVisible(false);
-	  //			return;
-	  //		}
-	  //  	else{
-	  //  		infoWindow.setContent('<DIV style="border-top:1px solid; border-bottom:2px groove black; border-left:1px solid; border-right:2px groove black;margin-bottom:1px;color:black;background-color:white; width:auto; height:auto;">'+
-    //                                    '<span style="color: #000000 !important;display: inline-block;font-size: 12px !important;font-weight: bold !important;letter-spacing: -1px !important;white-space: nowrap !important; padding: 2px 2px 2px 2px !important">' + 
-    //                                    '<img src=/logo-16x16.png>' +
-    //                                    restaurant_name
-    //                                    +'<span></div>');
-	  //      infoWindow.setPoint(oTarget.getPoint());
-	  //      infoWindow.setVisible(true);
-	  //      infoWindow.setPosition({right : 15, top : 30});
-	  //      infoWindow.autoPosition();
-	  //      return;
-	  //  	}
-	  //  }
-    //});
+	//	// Show nearby restaurants on map
+	//	<% @nearbyRestaurants.each_with_index do |restaurant, index| %>
+	//		<% if restaurant.lat != nil && restaurant.lng != nil %>
+	//    	var lat = <%= restaurant.lat %>;
+	//    	var lng = <%= restaurant.lng %>;
+	//    	var restaurant_name = '<%= restaurant.name %>';
+	//    	var latlng = new nhn.api.map.LatLng(lat, lng);
+	//    	var oMarker = new nhn.api.map.Marker(oIcon, {point: latlng, title: restaurant_name});
+	//			var oLabel = new nhn.api.map.MarkerLabel();
+	//      oMap.addOverlay(oMarker);
+	//      oMap.addOverlay(oLabel);
+	//      oLabel.setVisible(true, oMarker);
+	//    <% end %>
+	//	<% end %>
+    oMap.addOverlay(oMarker);
+    oMap.addOverlay(infoWindow);
+   	oMap.attach('click', function(oCustomEvent) {
+    	var oPoint = oCustomEvent.point;
+    	var oTarget = oCustomEvent.target;
+    	if (oTarget instanceof nhn.api.map.Marker) {
+		  	if(infoWindow.getVisible()){
+		 		infoWindow.setVisible(false);
+				return;
+			}
+		  	else{
+	 	  		infoWindow.setContent('<DIV style="border-top:1px solid; border-bottom:2px groove black; border-left:1px solid; border-right:2px groove black;margin-bottom:1px;color:black;background-color:white; width:auto; height:auto;">' + 
+	 	  			'<span style="color: #000000 !important;display: inline-block;font-size: 12px !important;font-weight: bold !important;letter-spacing: -1px !important;white-space: nowrap !important; padding: 2px 2px 2px 2px !important">' + '<img src=/logo-16x16.png>' + 
+	 	  			restaurant_name + '<span></div>');
+	      		infoWindow.setPoint(oTarget.getPoint());
+	      	infoWindow.setVisible(true);
+	      	infoWindow.setPosition({right : 15, top : 30});
+	      	infoWindow.autoPosition();
+	      	return;
+	  		}
+		}
+    });
 	};
 </script>
