--- a/app/views/addr_rules/show.html.erb
+++ b/app/views/addr_rules/show.html.erb
@@ -18,8 +18,6 @@
 	// Change this to normal data passing codes to js
 	$(document).ready(function(){ 
 		showMarkers(<%= @coord_array %>);
-		$("._nmap_marker").click(function(){
-			$(".nmap_infowindow_content").toggle();
-		});
+		showLabels();
 	});
 </script>
