--- a/app/views/franchises/_fields.html.erb
+++ b/app/views/franchises/_fields.html.erb
@@ -1,6 +1,4 @@
 <%= f.label :id, "id" %>
-<%= f.text_field :id, data: { rule_required: "true",
-	msg_required: "Please enter SOMETHING" } %>
+<%= f.text_field :id %>
 <%= f.label :name, "name" %>
-<%= f.text_field :name, data: { rule_required: "true",
-	msg_required: "Please enter SOMETHING" } %>
+<%= f.text_field :name %>
