--- a/app/views/rest_errs/_field.html.erb
+++ b/app/views/rest_errs/_field.html.erb
@@ -1,14 +1,14 @@
 <%= f.label :presence_err %>
-<%= f.check_box :presence_err %>
+<%= f.check_box :presence_err, class: "checkboxes" %>
 
 <%= f.label :menu_err %>
-<%= f.check_box :menu_err %>
+<%= f.check_box :menu_err, class: "checkboxes" %>
 
 <%= f.label :phnum_err %>
-<%= f.check_box :phnum_err %>
+<%= f.check_box :phnum_err, class: "checkboxes" %>
 
 <%= f.label :category_err %>
-<%= f.check_box :category_err %>
+<%= f.check_box :category_err, class: "checkboxes" %>
 
 <%= f.label :etc %>
 <%= f.text_area :etc %>
@@ -16,7 +16,5 @@
 <%= f.label :pictures %>
 <%= f.fields_for :pictures do |ff| %>
 	<%= ff.label :img %>
-	<%= ff.file_field :img, multiple: true, accept: "image/jpeg, image/png, image/gif", data: { validate: "image" } %>
-	<%= ff.file_field :img, multiple: true, accept: "image/jpeg, image/png, image/gif", data: { validate: "image" } %>
-	<%= ff.file_field :img, multiple: true, accept: "image/jpeg, image/png, image/gif", data: { validate: "image" } %>
+	<%= ff.file_field :img, multiple: true, class: "uploadImage" %>
 <% end %>
