--- a/app/views/restaurants/_field.html.erb
+++ b/app/views/restaurants/_field.html.erb
@@ -1,10 +1,10 @@
 <%= f.label :name %>
-<%= f.text_field :name, data: { validate: "fill" } %>
+<%= f.text_field :name %>
 
 <%= render "shared/category_select", f: f %>
 
 <%= f.label :addr %>
-<%= f.text_field :addr, data: { validate: "fill" } %>
+<%= f.text_field :addr %>
 
 <%= f.label :phnum %>
 <%= f.text_field :phnum %>
