--- a/app/views/questions/_new.html.erb
+++ b/app/views/questions/_new.html.erb
@@ -7,7 +7,13 @@
 
 <script>
 $(document).ready( function() {
-	$("#new_question").validate();
+	$("#new_question").validate({
+		rules: {
+			'question[email]': { required: true, email: true },
+			'question[contents]': { required: true }
+		}
+
+	});
 });
 </script>
 <!--
