--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -74,9 +74,34 @@
 <h1>Map</h1>
 <div id="map_canvas" style="width: 80%; height: 60%"></div>
 
+<!-- This script is for require_from_group method --!>
+<script src="http://jqueryvalidation.org/files/dist/additional-methods.min.js"></script>
 <script>
 	$(function(){
 		$('.pagination a').attr('data-remote', 'true')
+	});
+
+	$(document).ready( function() {
+		$("#new_rest_err").validate({
+			rules: {
+				'rest_err[presence_err]': { require_from_group: [1, ".checkboxes"] },
+				'rest_err[menu_err]': { require_from_group: [1, ".checkboxes"] },
+				'rest_err[phnum_err]': { require_from_group: [1, ".checkboxes"] },
+				'rest_err[category_err]': { require_from_group: [1, ".checkboxes"] }
+			}
+		});
+		$('#new_menu').validate({
+			rules: {
+				'menu[menu_title_id]': { required: true	},
+				'menu[name]': { required: true }
+			}
+		});
+		$('#new_comment').validate({
+			rules: {
+				'comment[contents]': { required: true }
+			}
+		});
+		imageUploadValidate();
 	});
 
 	$(document).on("page:load", initialize());
