Login check js about comment#new

--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -5,5 +5,5 @@
 
 	<!-- Specify field because of controller subordination -->
 	<%= render "comments/field", f: f %>
-	<%= f.submit "update comment" %>
+	<%= f.submit "update comment", { id: "update_comment" }  %>
 <% end %>
